Remove privileged flag from build process and update documentation for bootc installation

--- a/.github/workflows/build-reusable.yml
+++ b/.github/workflows/build-reusable.yml
@@ -63,8 +63,8 @@ jobs:
             CRIO_VERSION=${{ inputs.crio_version }}
             KUBERNETES_VERSION=${{ inputs.kubernetes_version }}
             ENABLE_CEPH=${{ inputs.enable_ceph }}
-          extra-args: |
-            --privileged
+          # Note: --privileged flag removed because buildah bud doesn't support it
+          # bootc install should be run separately after the image is built
           # optional: enable layer caching if runner supports it
           # layers: true
 
